Fix test to not require additional settings on JDK 9 (#611)